      Known crawlers only get 403 for most actions, but nevertheless they first
      tried. There was no means keeping them away from actions due to the rather
      braindead robots.txt standard. You can only disallow pathes there, but
      moin's actions were querystring based, not path based (this would need
      regex support in robots.txt, but there is no such thing).
      This changed now. Moin will now generate action URLs you can handle in
      robots.txt, like /action/info/PageName?action=info. So if you don't want
      bots triggering actions, just disallow /action/ there. Keep in mind that
      attachments are handled by /action/AttachFile, so if you want attached
      files and pictures indexed by search engine, don't disallow
      /action/AttachFile/ in your robots.txt.
    * We don't use ...?action=show any more for the "Clear message" links shown
      in the message boxes, but directly link to the page.

Version 1.5-current:
   * moin.fcg improved - if you use FastCGI, you must use the new file:
     * can self-terminate after some number of requests (default: -1, this means
       "unlimited lifetime")
     * the count of created threads is limited now (default: 5), you can use 1
       to use non-threaded operation.
     * configurable socket.listen() backlog (default: 5)
  * tuning:
    * more efficient locking code on POSIX platforms, we do much less I/O there now
    * removed most chmod calls in favour of a single os.umask call
  * fixed a bad crash that happens (on ANY page!) when you put a *Dict page's
    name as a member into a *Group page
  
Version 1.5.4:
    HINT: read docs/README.migration.
Version 1.5.4-current:
    * increased maxlength of some input fields from 80 to 200

Version 1.5.current:
  Developer notes:
    * We switched to Mercurial SCM, see here for more infos:
      http://moinmoin.wikiwikiweb.de/MoinDev/MercurialGuide

  Bugfixes:
    * fix MonthCalendar macro for non-ASCII pagenames (thanks to Jonas Smedegaard)