@@ -249,12 +249,13 @@ Version 1.6.current:
       braindead robots.txt standard. You can only disallow pathes there, but
       moin's actions were querystring based, not path based (this would need
       regex support in robots.txt, but there is no such thing).
-      This changed now. Moin will now generate action URLs you can handle in
+      This changed now. Moin is able to generate action URLs you can handle in
       robots.txt, like /action/info/PageName?action=info. So if you don't want
       bots triggering actions, just disallow /action/ there. Keep in mind that
       attachments are handled by /action/AttachFile, so if you want attached
       files and pictures indexed by search engine, don't disallow
-      /action/AttachFile/ in your robots.txt.
+      /action/AttachFile/ in your robots.txt. In order to use this feature,
+      set url_prefix_action in your wikiconfig to e.g. "action".
     * We don't use ...?action=show any more for the "Clear message" links shown
       in the message boxes, but directly link to the page.
 
